# example-analyzer

./: PARTICIPANTS_GUIDE.md  README.md  run.sh
src/: CMakeLists.txt  Sarif.cpp
